--- a/YourDrink/AppShell.xaml
+++ b/YourDrink/AppShell.xaml
@@ -3,9 +3,9 @@
     x:Class="YourDrink.AppShell"
     xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-    xmlns:local="clr-namespace:YourDrink"
-    Shell.FlyoutBehavior="Disabled"
-    Title="YourDrink">
+    xmlns:local="clr-namespace:YourDrink.Views"
+    Title="YourDrink"
+    Shell.FlyoutBehavior="Disabled">
 
     <ShellContent
         Title="Home"
