--- a/YourDrink/Views/MainPage.xaml
+++ b/YourDrink/Views/MainPage.xaml
@@ -2,36 +2,67 @@
 <ContentPage
     x:Class="YourDrink.Views.MainPage"
     xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
-    xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml">
+    xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+    xmlns:ViewModels="clr-namespace:YourDrink.ViewModels"
+    Title="Drinks"
+    x:DataType="ViewModels:MainViewModel"
+    Shell.NavBarIsVisible="False">
 
     <ScrollView>
-        <VerticalStackLayout Padding="30,0" Spacing="25">
-            <CarouselView ItemsSource="{Binding drinks}"/>
-
-            <!--<Image
-                Aspect="AspectFit"
-                HeightRequest="185"
-                SemanticProperties.Description="dot net bot in a race car number eight"
-                Source="dotnet_bot.png" />-->
-
+        <VerticalStackLayout Padding="20" Spacing="15">
+            <!--<SearchBar />-->
 
             <Label
-                SemanticProperties.HeadingLevel="Level1"
-                Style="{StaticResource Headline}"
-                Text="Hello, World!" />
+                FontAttributes="Bold"
+                FontSize="22"
+                Text="Category" />
 
-            <Label
-                SemanticProperties.Description="Welcome to dot net Multi platform App U I"
-                SemanticProperties.HeadingLevel="Level2"
-                Style="{StaticResource SubHeadline}"
-                Text="Welcome to &#10;.NET Multi-platform App UI" />
+            <CarouselView
+                ItemsSource="{Binding Categories}"
+                Loop="False"
+                PeekAreaInsets="140"
+                Position="2">
+                <CarouselView.ItemsLayout>
 
-            <Button
-                x:Name="CounterBtn"
-                Clicked="OnCounterClicked"
-                HorizontalOptions="Fill"
-                SemanticProperties.Hint="Counts the number of times you click"
-                Text="Click me" />
+                    <LinearItemsLayout ItemSpacing="10" Orientation="Horizontal" />
+                </CarouselView.ItemsLayout>
+                <CarouselView.ItemTemplate>
+                    <DataTemplate>
+                        <StackLayout>
+                            <Frame
+                                Padding="5,20"
+                                BackgroundColor="#dfdbf2"
+                                BorderColor="#dfdbf2"
+                                CornerRadius="10"
+                                HasShadow="True">
+                                <Frame.GestureRecognizers>
+                                    <TapGestureRecognizer Tapped="TapGestureRecognizer_Tapped" />
+                                </Frame.GestureRecognizers>
+                                <!--<StackLayout>-->
+                                <Label
+                                    FontAttributes="Bold"
+                                    HeightRequest="35"
+                                    HorizontalOptions="Center"
+                                    HorizontalTextAlignment="Center"
+                                    Text="{Binding Nombre}"
+                                    VerticalOptions="Center"
+                                    VerticalTextAlignment="Center" />
+
+                                <!--</StackLayout>-->
+                            </Frame>
+                        </StackLayout>
+                        <!--<Label
+                            FontAttributes="Bold"
+                            FontSize="18"
+                            HorizontalOptions="Center"
+                            Text="{Binding Nombre}"
+                            VerticalOptions="Center" />-->
+                    </DataTemplate>
+                </CarouselView.ItemTemplate>
+            </CarouselView>
+
+
+
         </VerticalStackLayout>
     </ScrollView>
 
